--- a/templates/partials/_base.html
+++ b/templates/partials/_base.html
@@ -73,7 +73,7 @@
               <a class="nav-link navbar-brand" href="#"><img width="30px" src="{% static 'Images/megaphone.png' %}" alt="" class="mr-1"><span class="ml-1 mr-2 li_font">BİLDİRİMLER</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link navbar-brand" href="#" id="message_button"><img width="30px" src="{% static 'Images/bubble-chat.png' %}" alt="" class="mr-1"><span class="ml-1 mr-2 li_font">MESAJ KUTUSU</span></a>
+              <a class="nav-link navbar-brand" href="{% url 'chat' %}" id="message_button"><img width="30px" src="{% static 'Images/bubble-chat.png' %}" alt="" class="mr-1"><span class="ml-1 mr-2 li_font">MESAJ KUTUSU</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link navbar-brand" href="#"><img width="30px" src="{% static 'Images/group.png' %}" alt="" class="mr-1"><span class="ml-1 mr-2 li_font">GRUPLAR</span></a>
